--- a/game.html
+++ b/game.html
@@ -17,14 +17,9 @@
     <div id="page" class="container-fluid">
         <h1>Guess The City!</h1>
       </div>
-
-      <div id="welcome" class="container-fluid">
-       
-      </div>
-
     
       <div class="quizContainer">
-        <img id="cityQuestion" src="assets/images/city/city1.jpg">
+        <img id="image"></img> 
         <div class="question"></div>
         <ul class="choiceList"></ul>
         <div class="quizMessage"></div>
