--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <title>Guess The City</title>
-</head>
-
-<body>
-    <div id="page" class="container-fluid">
-        <h1>Guess The City!</h1>
-      </div>
-
-      <div id="welcome" class="container-fluid">
-       <h7>Welcome to this game, Guess The City! Hit the start button to begin!</h7>
-      </div>
-      <div id="citypic" class="container-fluid">
-       <img id="picture" src="/assets/images/background.png" alt="">
-       </div>
-      <div id="start" class="container-fluid">
-        <button>
-          <a href="game.html">START</a>
-        </button>
-       </div>
-
-      
-
-       <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-       <script type="text/javascript" src="/apps.js"></script>
-</body>
-
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+        <title>Guess The City</title>
+    </head>
+    <body>
+        <div id="page" class="container-fluid">
+            <h1>Guess The City!</h1>
+        </div>
+        <div id="welcome" class="container-fluid">
+            <h7>Welcome to this game, Guess The City! Hit the start button to begin!</h7>
+        </div>
+        <div id="citypic" class="container-fluid">
+            <img id="picture" src="/assets/images/background.png" alt="welcomeimage" />
+        </div>
+        <div id="start" class="container-fluid">
+            <button>
+                <a href="game.html">START</a>
+            </button>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/apps.js"></script>
+    </body>
 </html>
