--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h6>Welcome to this game, Guess The City! Hit the start button to begin!</h6>
         </div>
         <div id="citypic" class="container-fluid">
-            <img id="picture" src="/assets/images/background.png" alt="welcomeimage" />
+            <img id="picture" src="../assets/images/background.png" alt="welcomeimage" />
         </div>
         <div id="start" class="container-fluid">
             <button>
